[package]
name = "id_newtype_macros"
description = "Compile time validation macros for the `id_newtype` crate."
documentation = "https://docs.rs/id_newtype_macros/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true
doctest = true
test = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
